# six-

./: CMakeLists.txt  README.md  package.xml  save.rviz
config/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
launch/: explorer.launch  gazebo.launch  gmapping.launch  testmap.launch
meshes/: base_link.STL  link_lb.STL  link_lf.STL  link_rb.STL  link_rf.STL
models/maptest/: model.config  model.sdf
scripts/: test.py  test_1.py  test_2.py  test_3.py
urdf/: six.urdf
worlds/: testmap.world
