<package format="2">
  <name>six</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for six</p>
    <p>This package contains configuration data, 3D models and launch files
for six robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>  
  <depend>move_base_msgs</depend>
  <depend>actionlib</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roslaunch</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>

  <export>
    <architecture_independent />
  </export>
</package>